<resources>
    <string name="app_name">型男计划</string>
    <string name="action_settings">Settings</string>
    <string name="my_plan">我的计划</string>
    <string name="plan_community">型男社区</string>
    <string name="plan_search_food">查询食物热量</string>
    <string name="plan_search_sport">查询运动消耗</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="my_mian">首页</string>

    <string name="plan_record_figure">记录身材</string>
    <string name="my_new_plan">生成计划</string>

    <!-- 升级的时候提示 -->
    <string name="version_description">描述：%1$s</string>
    <string name="update">立即更新</string>
    <string name="ignore_update">忽略更新</string>
    <string name="new_version">发现新版本</string>
    <string name="latest_version">最新版本：%1$s</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="suggest_content"> 怎么样的减肥速度最健康、最有效率呢？答案是每周减0.5-1公斤。如果你是个求好心切的肥胖族，希望能瘦得快一点，也切记每周不要减超过一公斤。因为，过速的减肥不只对健康无益，还可能造成危险性很高的酮酸中毒，而且复胖率也比较高。

那么，要如何规画减肥期间每天必须摄取的热量，才能健康又有效率的瘦下来呢？首先，你可以参考自己的理想体重，订出目标体重，来决定想减掉的体重有多少；然后，依据减每公斤体重须减少七千七百大卡的热量值，计算出欲达到目标体重所必须减少摄取的总热量；接下来，以每周减0.5~1公斤为标准，决定合理的减肥期间，再将必须减少摄取的总热量除以天数，得到每天必须减少摄取的热量；最后，将前面所提的每天所需的热量，减去每天必须减少摄取的热量，就是减肥期间每天必须摄取的热量。

让我们再以淑玲为例，淑玲的身高一百六十公分，体重为五十八公斤。

其标准体重 = 51公斤 ＋ 0.5 (身高-155公分) = 51 ＋ 0.5(160-155) = 53.5(公斤)

由于淑玲的身材是属于小骨架的，标准体重必须向下修正百分之三~五，所以她为自己定下的目标体重是52公斤。她想利用三个月的时间，将体重由58减至52公斤（平均一周减0.5公斤），于是，她透过以下算式，找出减肥期间每天必须摄取的热量。

淑玲想减掉的体重 = 目前体重 - 目标体重 = 58 -52 =6(公斤)。

三个月内必须减少摄取的总热量= 6 × 7700 = 46200大卡。
每天必须减少摄食的热量 = 46200 ÷ 90(天) ≒ 513大卡。
减肥期间每天必须摄取的热量 = 每天所需的热量－每天必须减少
摄食的热量 = 1941 - 513 = 1428(大卡)

也就是说，只要淑玲有恒心每天将饮食摄取热量控制在1428大卡，三个月后，她一定可以看到磅秤上的数字由58降到52。

OK！现在你该知道，该如何计算出自己每天该摄取多少热量，才能瘦得下来了吧！拿出纸笔来，完成下列算式。

你目前的体重是：＿＿公斤。
你的目标体重是：＿＿公斤。
你想减掉的体重 = (1) - (2) = ＿＿公斤。
减肥期间必须减少摄取的总热量 = (3) × 7700 = ＿＿大卡。
每天必须减少摄食的热量 = (4) ÷ 减肥期间(天) = ＿＿大卡。
减肥期间每天必须摄取的热量 = REE × 活动系数 - (5) = ＿＿大卡。</string>
    <string name="heart_rate_content">人体要燃烧脂肪，需要满足三个必要条件：\n
1、该运动要达到中低强度的运动心率；\n
2、这种中低强度运动心率的运动要持续20分钟以上；\n
3、这种运动必须是大肌肉群的运动，如慢跑、游泳、健身操等。\n
低于或高于这个范围，都不算中低强度运动心率，燃烧的也就不是脂肪了~</string>
    <string name="title_activity_test11">Test11Activity</string>
    <string name="plan_change">变化趋势</string>
    <string name="my_plan_group">计划</string>
    <string name="plan_figure_group">身材</string>
    <string name="know_me">一分钟了解自己</string>
    <string name="action_about_us">关于我们</string>
    <string name="menu_share">分享</string>

</resources>
